--- a/src/main/resources/assets/dynamx_basics/lang/en_us.lang
+++ b/src/main/resources/assets/dynamx_basics/lang/en_us.lang
@@ -5,5 +5,6 @@ basadd.key.locked=Vehicle locked !
 basadd.key.unlocked=Vehicle unlocked !
 basadd.key.invalid=Invalid key !
 basadd.key.linked.to=%s's key
+basadd.fuel.jerrycan=Jerrycan's fuel : %s
 
 item.dynx.dynamx_basics.fuel_jerrycan.name=Fuel jerrycan
